deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: accounts
  name: accounts
spec:
  replicas: 3
  selector:
    matchLabels:
      app: accounts
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: accounts
    spec:
      containers:
      - image: us.icr.io/sn-labs-abishek6996/accounts:1
        name: accounts
        resources: {}
status: {}
