deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: accounts
  name: accounts
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: accounts
  type: ClusterIP
status:
  loadBalancer: {}
